# laba2-sem2

./: .gitignore  ArraySequence.cpp  ArraySequence.h  CMakeLists.txt  Dockerfile  Dockerfile1  DynamicArray.cpp  DynamicArray.h  LICENSE  LinkedList.cpp  LinkedList.h  ListSequence.cpp  ListSequence.h  README.md  Sequence.cpp  Sequence.h  Tests.cpp  docker-comp[ose.yml  docker-compose.yml  main.cpp  parsers.gcov
.github/workflows/: cmake.yml  core_debug.yml  core_realize.yml  core_release.yml  docker.yml
Tests/: ArraySequenceTests.cpp  CMakeLists.txt  LinkedListTests.cpp  ListSequenceTests.cpp  SequenceTests.cpp  Tests.cpp
core/: Dockerfile
core/src/: ArraySequence.h  CMakeLists.txt  Collection.h  Complex.h  DynamicArray.h  Enumerable.h  ICollection.h  IEnumerable.h  IEnumerator.h  LinkedList.h  ListSequence.h  Polynomial.h  Sequence.h  TestClass.h  main.cpp
core/src/CMakeModules/: CodeCoverage.txt
core/src/Tests/: ArraySequenceTests.cpp  CMakeLists.txt  ComplexTests.cpp  DynamicArrayTests.cpp  EnumerableTests.cpp  LinkedListTests.cpp  ListSequenceTests.cpp  PolynomialTests.cpp  SequenceTests.cpp
core/src/tempNew/: CMakeLists.txt  main.cpp
test/: Dockerfile
ui/: Dockerfile  app.py  gunicorn.sh  main.py  requirements.txt
ui/src/: app.py  cert.py  config.py  flask_celery.py  requirements.txt  worker.py
ui/src/static/js/: index.js  refresh.js
ui/src/templates/: base.html  index.html
ui/templates/: base.html  index.html
